# c-cookie

./: .gitignore  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt
{{cookiecutter.project_slug}}/app/: CMakeLists.txt
{{cookiecutter.project_slug}}/example/: CMakeLists.txt
{{cookiecutter.project_slug}}/include/: library.h
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  library.c  library.h
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  test_example.c
